Quartz sync: Oct 23, 2024, 2:17 PM

--- a/content/5.Semester/JurIT/VL/2.VL/2. VL Juristisches IT-Projektmanagement 22.10.2022.md
+++ b/content/5.Semester/JurIT/VL/2.VL/2. VL Juristisches IT-Projektmanagement 22.10.2022.md
@@ -7,10 +7,175 @@ fach: "[[Juristisches IT-Projektmanagement]]"
 Thema:
 Benötigte Zeit:
 date created: Tuesday, 22. October 2024, 07:58
-date modified: Tuesday, 22. October 2024, 08:01
+date modified: Wednesday, 23. October 2024, 12:51
 ---
 
 _Start:_ Folie 12
+
+# Softwareverträge und Projektmanagement: Eine Einführung
+
+_Ein Lernmaterial für diejenigen, die die Vorlesung nicht besuchen konnten_
+
+---
+
+## Inhaltsverzeichnis
+
+1. [Einleitung](#einleitung)
+2. [Die Beziehung zwischen Auftraggeber und Auftragnehmer](#die-beziehung-zwischen-auftraggeber-und-auftragnehmer)
+   - [Die Rolle des Auftraggebers](#die-rolle-des-auftraggebers)
+   - [Die Rolle des Auftragnehmers](#die-rolle-des-auftragnehmers)
+3. [Typische Probleme in IT-Projekten](#typische-probleme-in-it-projekten)
+4. [Warum scheitern IT-Projekte?](#warum-scheitern-it-projekte)
+5. [Vertragsgegenstände in IT-Projekten](#vertragsgegenstände-in-it-projekten)
+6. [Arten von Verträgen im IT-Bereich](#arten-von-verträgen-im-it-bereich)
+   - [Kaufvertrag](#kaufvertrag)
+   - [Werkvertrag](#werkvertrag)
+   - [Dienstvertrag](#dienstvertrag)
+   - [Mietvertrag](#mietvertrag)
+7. [Allgemeines Vertragsrecht](#allgemeines-vertragsrecht)
+   - [Angebot und Annahme](#angebot-und-annahme)
+   - [Vergütung](#vergütung)
+8. [Allgemeine Geschäftsbedingungen (AGB)](#allgemeine-geschäftsbedingungen-agb)
+9. [Zusammenfassung](#zusammenfassung)
+
+---
+
+## Einleitung
+
+In der heutigen Geschäftswelt sind IT-Projekte und Softwareentwicklungen unverzichtbar. Doch nicht immer verlaufen diese Projekte reibungslos. Diese Lernseite soll diejenigen unterstützen, die die Vorlesung nicht besuchen konnten, und bietet einen Überblick über wichtige Aspekte von Softwareverträgen, Projektmanagement und den rechtlichen Rahmenbedingungen.
+
+---
+
+## Die Beziehung zwischen Auftraggeber und Auftragnehmer
+
+### Die Rolle des Auftraggebers
+
+- **Unterschätzt oft seine Rolle**: Auftraggeber denken oft, sie könnten nach der Auftragsvergabe die Hände in den Schoß legen. In der Softwareentwicklung ist jedoch eine intensive Zusammenarbeit erforderlich.
+- **Klare Anforderungen definieren**: Der Auftraggeber muss genau wissen, welche Funktionalitäten die Software haben soll, welche Mengenanforderungen bestehen und welche Daten verarbeitet werden sollen.
+- **Aktive Mitwirkung**: Ohne die aktive Beteiligung des Auftraggebers kann das Projekt scheitern. Beispielsweise ist die Abnahme der Software ein wichtiger Schritt, der vom Auftraggeber durchgeführt werden muss.
+
+### Die Rolle des Auftragnehmers
+
+- **Weckt hohe Erwartungen**: Verspricht oft mehr, als er tatsächlich leisten kann.
+- **Transparenzmangel**: Macht selten transparent, was das Vorhaben letztlich kosten wird, da er selbst den Umfang oft nicht genau abschätzen kann.
+- **Ressourcenknappheit**: Hat oft nicht genügend Ressourcen, um alle Kundenprojekte gleichzeitig zu bedienen, insbesondere wenn mehrere Kunden an den Ressourcen "zerren".
+
+---
+
+## Typische Probleme in IT-Projekten
+
+- **Unklare Anforderungen**: Der Auftraggeber weiß zu Beginn oft nicht genau, was er benötigt. Oft kommt der "Appetit beim Essen", und neue Anforderungen entstehen während des Projekts.
+- **Agile Methoden**: Wurden entwickelt, um flexibel auf sich ändernde Anforderungen zu reagieren und iterativ zum Zielzustand zu gelangen.
+- **Unzureichende Vorbereitung**: Auftraggeber wollen oft schnell zur Beauftragung kommen und übersehen wichtige Punkte, die später zu Problemen führen können.
+- **Vertragsverhandlungen ohne Substanz**: Beide Seiten müssen genau wissen, was sie verhandeln wollen, um realistische preisliche Konditionen zu vereinbaren.
+
+---
+
+## Warum scheitern IT-Projekte?
+
+1. **Unklare Vereinbarungen**: IT-Verträge und Pflichtenhefte sind oft von geringer Qualität oder unvollständig.
+2. **Unkenntnis der Vertragsinhalte**: Projektleiter kennen oft den Vertrag nicht oder wissen nicht, wie sie ihn umsetzen sollen.
+3. **Offene Punkte zu Beginn**: Große offene Fragen werden nicht geklärt und führen im Projektverlauf zu Konflikten.
+4. **Übertriebene Versprechungen des Anbieters**: Anbieter machen kulturelle Zusagen, die sie nicht einhalten können.
+5. **Fehlende Anpassung bei Problemen**: Wenn das Projekt in Schwierigkeiten gerät, fehlt oft die Flexibilität oder der Wille zur Lösung.
+
+---
+
+## Vertragsgegenstände in IT-Projekten
+
+- **Beratung**: Unterstützung bei der Definition von Anforderungen und Lösungen.
+- **Planung**: Erstellung von Projektplänen und Zeitplänen.
+- **Lieferung von Hardware**: Bereitstellung der notwendigen Hardware für das Projekt.
+- **Wartung und Pflege**:
+  - **Wartung**: Bezieht sich auf Hardware (z. B. Austausch defekter Festplatten).
+  - **Pflege**: Bezieht sich auf Software (z. B. Fehlerbehebung, Updates).
+- **Softwareerstellung und -überlassung**:
+  - **Neuentwicklung**: Erstellung von Software von Grund auf.
+  - **Anpassung**: Modifikation bestehender Software.
+- **Installation und Schulung**: Implementierung der Systeme und Schulung der Mitarbeiter.
+- **Datenübernahme**: Migration von Daten aus Altsystemen in das neue System.
+
+---
+
+## Arten von Verträgen im IT-Bereich
+
+### Kaufvertrag
+
+- **Definition**: Erwerb von Produkten gegen Bezahlung.
+- **Anwendung**: Kauf von Hardware oder Standardsoftware.
+- **Merkmale**:
+  - Eigentumsübertragung findet statt.
+  - Gewährleistungspflichten des Verkäufers.
+
+### Werkvertrag
+
+- **Definition**: Erstellung eines Werkes gegen Vergütung, wobei ein Erfolg geschuldet wird.
+- **Anwendung**:
+  - Neuentwicklung von Software.
+  - Anpassung bestehender Software.
+  - Durchführung von Abnahmeprüfungen.
+- **Merkmale**:
+  - Erfolg ist geschuldet.
+  - Abnahme des Werkes ist erforderlich.
+
+### Dienstvertrag
+
+- **Definition**: Erbringung einer Dienstleistung gegen Vergütung, ohne dass ein konkreter Erfolg geschuldet wird.
+- **Anwendung**:
+  - Beratungsleistungen.
+  - Schulungen.
+- **Merkmale**:
+  - Tätigkeit wird erbracht.
+  - Kein Erfolg garantiert.
+
+### Mietvertrag
+
+- **Definition**: Überlassung von Gegenständen zur Nutzung gegen Entgelt.
+- **Anwendung**:
+  - Nutzung von Software gegen regelmäßige Zahlungen (z. B. Cloud-Dienste, Software-Abonnements).
+- **Merkmale**:
+  - Kein Eigentumserwerb.
+  - Nutzungsrechte werden eingeräumt.
+
+---
+
+## Allgemeines Vertragsrecht
+
+### Angebot und Annahme
+
+- **Angebot**: Eine empfangsbedürftige Willenserklärung, die alle wesentlichen Vertragsbestandteile enthält.
+  - **Verbindlichkeit**: Angebote sind grundsätzlich verbindlich.
+  - **Befristung**: Angebote sollten befristet sein, um spätere Probleme zu vermeiden.
+- **Annahme**: Zustimmung zum Angebot ohne Änderungen.
+  - **Unveränderte Annahme**: Änderungen gelten als neues Angebot.
+  - **Verspätete Annahme**: Gilt als neues Angebot des Annehmenden.
+
+### Vergütung
+
+- **Stillschweigende Vereinbarung**: Eine Vergütung gilt als vereinbart, wenn sie den Umständen nach zu erwarten ist (§ 632 BGB).
+- **Übliche Vergütung**: Ist keine Vergütung vereinbart, gilt die übliche Vergütung als vereinbart.
+- **Kostenanschläge**: Sind im Zweifel nicht zu vergüten.
+
+---
+
+## Allgemeine Geschäftsbedingungen (AGB)
+
+- **Definition**: Vorformulierte Vertragsbedingungen, die für eine Vielzahl von Verträgen gelten sollen.
+- **Anforderungen**:
+  - **Transparenz**: Klauseln müssen klar und verständlich sein.
+  - **Keine überraschenden Klauseln**: Überraschende oder ungewöhnliche Klauseln sind unwirksam.
+  - **Benachteiligung**: Übermäßig benachteiligende Bestimmungen sind unwirksam.
+- **AGB-Kontrolle**:
+  - **Rechtsfolgen unwirksamer Klauseln**: Unwirksame Klauseln werden durch gesetzliche Regelungen ersetzt.
+  - **Unklarheitenregel**: Unklare Formulierungen gehen zu Lasten des Verwenders.
+
+---
+
+## Zusammenfassung
+
+IT-Projekte sind komplex und erfordern eine enge Zusammenarbeit zwischen Auftraggeber und Auftragnehmer. Klare Verträge, eine genaue Definition der Anforderungen und eine ständige Kommunikation sind entscheidend für den Projekterfolg. Das Verständnis der verschiedenen Vertragsarten und rechtlichen Rahmenbedingungen hilft, Missverständnisse zu vermeiden und eine solide Grundlage für die Zusammenarbeit zu schaffen.
+
+---
 
 <!-- DISQUS SCRIPT COMMENT START -->
 
@@ -38,11 +203,11 @@ comments powered by Disqus.
 <div id="disqus_thread"></div>
 <script>
     /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
     /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
     */
